[package]
name = "infuse"
version = "0.1.0"
authors = ["shockham <samuel.hockham@gmail.com>"]
edition = "2018"

[dependencies]
js-sys = "0.3.20"
wasm-bindgen = "0.2.43"

[dependencies.web-sys]
version = "0.3.4"
features = [
  'Document',
  'Element',
  'HtmlCanvasElement',
  'WebGlBuffer',
  'WebGlRenderingContext',
  'WebGlProgram',
  'WebGlShader',
  'Window',
]
