[package]
name = "infuse"
version = "0.2.0"
authors = ["shockham <samuel.hockham@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/shockham/infuse"
homepage = "https://github.com/shockham/infuse"
documentation = "https://docs.rs/infuse"
description = "Minimalist wasm based webgl renderer"
edition = "2018"

[dependencies]
js-sys = "0.3.20"
wasm-bindgen = "0.2.43"

[dependencies.web-sys]
version = "0.3.4"
features = [
  'Document',
  'Element',
  'HtmlCanvasElement',
  'WebGlBuffer',
  'WebGlRenderingContext',
  'WebGlProgram',
  'WebGlShader',
  'WebGlUniformLocation',
  'Window',
]
