[package]
name = "infuse"
version = "0.6.0"
authors = ["shockham <samuel.hockham@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/shockham/infuse"
homepage = "https://github.com/shockham/infuse"
documentation = "https://docs.rs/infuse"
description = "Minimalist wasm based webgl renderer"
edition = "2018"

[dependencies]
js-sys = "0.3"
wasm-bindgen = "0.2"


[features]
default = ["web-sys/WebGlRenderingContext"]
webgl2 = ["web-sys/WebGl2RenderingContext"]

[dependencies.web-sys]
version = "0.3"
features = [
  'Document',
  'Element',
  'HtmlCanvasElement',
  'WebGlBuffer',
  'WebGlProgram',
  'WebGlShader',
  'WebGlUniformLocation',
  'Window',
  'WebGlContextAttributes'
]
